[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.3.0"
borsh-derive = "1.3.0"
solana-program = "=1.17.15"

[dev-dependencies]
solana-program-test = "=1.17.15"
solana-sdk = "=1.17.15"
solana-banks-interface = "=1.17.15"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
